--- a/pulse/src/App.css
+++ b/pulse/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -8,6 +9,7 @@
 }
 
 .App-header {
+  border-radius: 5px;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -20,13 +22,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
